--- a/index.html
+++ b/index.html
@@ -8,24 +8,96 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="header">
-    <div class="logo">Header Logo</div>
-    <nav class="navbar">
-      <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+  <nav class="navbar">
+    <div class="container">
+      <div class="logo">Header Logo</div>
+      <ul class="nav">
+        <li>
+          <a href="#">header link one</a>
+        </li>
+        <li>
+          <a href="#">header link two</a>
+        </li>
+        <li>
+          <a href="#">header link three</a>
+        </li>
       </ul>
-    </nav>
-  </div>
-  <div class="hero">
-    <div class="hero-text"></div>
-    <div class="hero-image"></div>
-  </div>
-  <div class="info"></div>
-    <div class="info-header"></div>
-  <div class="quote"></div>
-  <div class="call"></div>
-  <div class="footer"></div>
+    </div>
+  </nav>
+
+  <header class="header">
+    <div class="container">
+      <div>
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button class="header">Sign up</button>
+      </div>
+      <img src="" alt="this is a placeholder for an image">
+    </div>
+  </header>
+  
+  <section class="info">
+    <div class="container">
+      <h2>Some random information</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="" alt="" class="card">
+          <p>
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" class="card">
+          <p>
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" class="card">
+          <p>
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="card">
+          <img src="" alt="" class="card">
+          <p>
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="quote">
+    <div class="container">
+      <p>
+        This is an inspiring quote, or a testimonial from a customer. 
+        Maybe it's just filling up space, or maybe people will actually read it. 
+        Who knows? All I know is that it looks nice.
+      </p>
+      <p class="author">
+        -Thor, God of Thunder
+      </p>
+    </div>
+  </section>
+
+  <section class="call-to-action">
+    <div class="container">
+      <div>
+        <p class="call">Call to action! It's time!</p>
+        <p class="text">Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <button>Sign up</button>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <p>Made with &hearts;</p>
+    </div>
+  </footer>
 </body>
 </html>
