--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <header class="header">
     <div class="container">
-      <div>
+      <div class="content">
         <h1>This website is awesome</h1>
         <p>
           This website has some subtext that goes under the main title.
