--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
       <div class="content">
         <h1>This website is awesome</h1>
         <p>
-          This website has some subtext that goes under the main title.
-          It's a smaller font and the color is lower contrast
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
         </p>
         <button class="header">Sign up</button>
       </div>
-      <img src="" alt="this is a placeholder for an image">
+      <div class="image">this is a placeholder for an image</div>
     </div>
   </header>
   
