--- a/index.html
+++ b/index.html
@@ -34,34 +34,36 @@
         </p>
         <button class="header">Sign up</button>
       </div>
-      <div class="image">this is a placeholder for an image</div>
+      <div class="image">
+        <img src="./resources/tokyo.jpg" alt="Tokyo at night">
+      </div>
     </div>
   </header>
   
   <section class="info">
     <div class="container">
-      <h2>Some random information</h2>
+      <h2>Some random information.</h2>
       <div class="cards">
         <div class="card">
-          <img src="" alt="" class="card">
+          <div class="card-image"></div>
           <p>
             this is some subtext under an illustration or image
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" class="card">
+          <div class="card-image"></div>
           <p>
             this is some subtext under an illustration or image
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" class="card">
+          <div class="card-image"></div>
           <p>
             this is some subtext under an illustration or image
           </p>
         </div>
         <div class="card">
-          <img src="" alt="" class="card">
+          <div class="card-image"></div>
           <p>
             this is some subtext under an illustration or image
           </p>
@@ -72,7 +74,7 @@
 
   <section class="quote">
     <div class="container">
-      <p>
+      <p class="content">
         This is an inspiring quote, or a testimonial from a customer. 
         Maybe it's just filling up space, or maybe people will actually read it. 
         Who knows? All I know is that it looks nice.
